package com.eldernest.entity;
import jakarta.persistence.*;
import jakarta.validation.constraints.Email;
import jakarta.validation.constraints.NotBlank;


@Entity
@Table(name ="users")
public class User {
    @Id
    @GeneratedValue (strategy = GenerationType.IDENTITY)
    private Long id;
    @NotBlank(message = "Name is required")
    private String name;
    @NotBlank(message = "Email is required")
    @Email(message ="Enter a valid email")
    private String email;
    private String role;

    public User(){

    }

    public User( String name, String email,String role){
        setName(name);
        setEmail(email);
        setRole(role);
    }


    public Long getId(){
        return id;
    }
    public void setId(Long id){
        this.id= id;
    }

    public String getName(){
        return name;
    }
    public void setName(String name){
        this.name= name;
    }

    public String getEmail(){
        return email;
    }
    public void setEmail(String email){
        this.email =email;
    }
    public String getRole(){
        return role;
    }
    public void setRole(String role){
        this.role=role;
    }

}
